--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
   "dependencies": {
     "vue": "^2.4.2",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "jade": "~1.11.0",
+    "morgan": "~1.8.1",
+    "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
