--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.5.7",
     "express": "~4.15.2",
     "jade": "~1.11.0",
+    "mongoose": "^4.11.11",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
     "vue": "^2.4.2",
@@ -36,7 +37,6 @@
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
