--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "ejs": "^2.5.7",
+    "express": "~4.15.2",
+    "jade": "~1.11.0",
+    "mongoose": "^4.11.11",
+    "morgan": "~1.8.1",
+    "serve-favicon": "~2.4.2",
     "axios": "^0.16.2",
     "vue": "^2.4.2",
     "vue-lazyload": "^1.1.3",
@@ -29,7 +38,6 @@
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
