--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
@@ -19,8 +20,8 @@
     "mongoose": "^4.11.11",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
-    "axios": "^0.16.2",
     "vue": "^2.4.2",
+    "vue-infinite-scroll": "^2.0.1",
     "vue-lazyload": "^1.1.3",
     "vue-router": "^2.7.0"
   },
