--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue": "^2.4.2",
     "vue-infinite-scroll": "^2.0.1",
     "vue-lazyload": "^1.1.3",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
